# qvm

./: .gitignore  GATES.md  README.md  ROADMAP.md  lib.py  myfile.ql  qlang.py
qvm/: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml  std.ql  zip.sh
qvm/core/: Cargo.toml
qvm/core/src/: lib.rs
qvm/core/src/gates/: quantum_gate_abstract.rs
qvm/core/src/state/: mod.rs  tensor_network.rs
qvm/core/src/types/: qlang_complex.rs
qvm/qlang/: Cargo.toml
qvm/qlang/src/: aliases.rs  apply.rs  ast.rs  errors.rs  interpreter.rs  lib.rs  main.rs  parser.rs  type_checker.rs  validators.rs
qvm/qlang/src/batch/: circuit_job.rs  errors.rs  runner.rs
qvm/qvm/: Cargo.toml
qvm/qvm/src/: backend.rs  cpu_backend.rs  lib.rs
qvm/qvm/src/cuda_backend/: apply.rs  init.rs  mod.rs
qvm/qvm/src/tensor_backend/: apply.rs  fallback.rs  init.rs  measure.rs  mod.rs
qvm/qvm/src/util/: mod.rs
qvm/src/: lib.rs  main.rs  qlang.rs  qvm.rs
qvm/src/batch/: circuit_job.rs  errors.rs  mod.rs  runner.rs
qvm/src/gates/: README_INDEX_EN.md  README_INDEX_PT.md  cnot.rs  fredkin.rs  hadamard.rs  mod.rs  pauli_x.rs  pauli_y.rs  pauli_z.rs  portal_registry.rs  quantum_gate_abstract.rs  s_dagger.rs  swap.rs  t.rs  toffoli.rs  u1.rs  u2.rs  u3.rs
qvm/src/gates/cu/kernels/: cnot.cu  fredkin.cu  hadamard.cu  pauli_y.cu  rx.cu  s_dagger.cu  swap.cu  t_dagger.cu  u1.cu  u2.cu
qvm/src/gates/cu/ptx/: hadamard.ptx  pauli_x.ptx  pauli_y.ptx  pauli_z.ptx  ry.ptx  rz.ptx  s_dagger.ptx  swap.ptx  t_dagger.ptx  toffoli.ptx  u1.ptx  u2.ptx  u3.ptx
qvm/src/gates/general/controlled_u/: controlled_u.cu  controlled_u.ptx  mod.rs
qvm/src/gates/one_q/: hadamard.rs  identity.rs  pauli_x.rs  pauli_y.rs  pauli_z.rs  rx.rs  ry.rs  rz.rs  s.rs  t.rs  t_dagger.rs  u2.rs
qvm/src/gates/one_q/hadamard/: README_EN.md  README_PT.md  hadamard.cu  hadamard.ptx  mod.rs
qvm/src/gates/one_q/identity/: mod.rs  (+1 more)
qvm/src/gates/three_q/: fredkin.rs  toffoli.rs
qvm/src/gates/two_q/: cnot.rs  swap.rs
qvm/src/qlang/: aliases.rs  apply.rs  ast.rs  errors.rs  interpreter.rs  mod.rs  parser copy.rs  parser.rs  validators.rs
qvm/src/qvm/: backend.rs  cpu_backend.rs  cuda_backend.rs  mod.rs
qvm/src/qvm/cuda/: executor.rs  mod.rs  types.rs
qvm/src/qvm/cuda_backend/: apply.rs  fallback.rs  init.rs  measure.rs  mod.rs
qvm/src/qvm/tensor_backend/: apply.rs  contract.rs  fallback.rs  init.rs  measure.rs  mod.rs
qvm/src/qvm/util/: mod.rs
qvm/src/state/: mod.rs  quantum_state.rs  tensor_network.rs
qvm/src/types/: mod.rs  qlang_complex.rs
qvm/tests/: arrays.rs  control_flow.rs  functions.rs  gates.rs  import.rs  loops.rs  qlang.rs  qvm.rs  state.rs  stdlib_expansion.rs
qvm/tests/gates/: cnot_test.rs  fredkin_test.rs  hadamard_test.rs  identity_test.rs  pauli_x_test.rs  pauli_y_test.rs  pauli_z_test.rs  rx_test.rs  ry_test.rs  rz_test.rs  s_dagger_test.rs  s_test.rs  swap_test.rs  t_dagger_test.rs  t_test.rs  toffoli_test.rs  u1_test.rs  u2_test.rs  u3_test.rs
qvm/tests/gates/one_q/: hadamard_test.rs  identity_test.rs  pauli_x_test.rs  pauli_y_test.rs  pauli_z_test.rs  rx_test.rs  ry_test.rs  rz_test.rs  s_dagger_test.rs  s_test.rs  t_dagger_test.rs  t_test.rs  u1_test.rs  u2_test.rs  u3_test.rs
qvm/tests/gates/three_q/: fredkin_test.rs  toffoli_test.rs
qvm/tests/gates/two_q/: cnot_test.rs  swap_test.rs
qvm/tests/qlang/: ast_test.rs  interpreter_test.rs  parser_test.rs  qlang_test.rs  validators_test.rs
qvm/tests/qvm/: qvm_test.rs
qvm/tests/state/: quantum_state_all_test.rs  quantum_state_test.rs
(+147 files in other folders)
