[package]
name = "qlang"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ndarray = "0.15"
num-complex = "0.4"
num-traits = "0.2"
libc = "0.2"
once_cell = "1.18.0"
rand = "0.8"
rayon = "1.8"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Torna `cust` opcional
cust = { version = "0.3.2", optional = true }

[lib]
name = "qlang"
path = "src/lib.rs"
crate-type = ["lib","cdylib"]

[features]
default = ["cpu"]
cpu = []
cuda = ["cust"]   # Agora cust é opcional e só entra aqui
wgpu = []
