[package]
name = "qlang"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
num-complex = "0.4"
num-traits = "0.2"
libc = "0.2"
once_cell = "1.18.0"
rand = "0.8"
rayon = "1.10"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"

libloading = "0.8"

# Torna `cust` opcional
cust = { version = "0.3.2", optional = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cc = "1.0"
glob = "0.3"

[lib]
name = "qlang"
path = "src/lib.rs"
crate-type = ["lib","cdylib"]

[features]
cpu = []
cuda = ["cust"] 
wgpu = []
tensor= []
default = ["cpu"]
