[package]
name = "qlang_core"
version = "0.3.0"
edition = "2021"

[dependencies]
ndarray = "0.15"
num-complex = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
cust = { version = "0.3.2", optional = true }
libloading = "0.8"
thiserror = "1.0"
bytemuck = "1.13" # Used in types/gates potentially?

[features]
cuda = ["cust"]
