[package]
name = "qlang"
version = "0.3.0"
edition = "2021"

[dependencies]
qlang_core = { path = "../core" }
qvm = { path = "../qvm" }
clap = { version = "4.0", features = ["derive"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
num-complex = "0.4"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "qlang"
path = "src/main.rs"
